--- a/build.gradle
+++ b/build.gradle
@@ -23,19 +23,10 @@ compileJava {
 minecraft {
     version = "1.12.2-14.23.5.2847"
     runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20171003"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings = "stable_39"
 }
+
 repositories {
-    maven {
-        url = "https://maven.blamejared.com/"
-    }
     maven {
         url = "https://minecraft.curseforge.com/api/maven"
     }
@@ -48,13 +39,15 @@ repositories {
 }
 
 dependencies {
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.594"
     provided "mezz.jei:jei_1.12.2:4.15.0.293:api"
     runtime "mezz.jei:jei_1.12.2:4.15.0.293"
 
-    deobfCompile "gregtechce:gregtech:1.12.2:1.10.2.566"
-
     deobfCompile "codechicken-lib-1-8:CodeChickenLib-1.12.2:3.2.3.357:universal"
+
+    compile files(
+            "libs/gregtech-1.12.2-2.1.0-beta.jar",
+            "libs/CraftTweaker2-1.12-4.1.20.670.jar"
+    )
 }
 
 processResources {
@@ -74,4 +67,19 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+
+def run(command) {
+    def process = command.execute()
+    def outputStream = new StringBuffer();
+    def errorStream = new StringBuffer();
+    process.waitForProcessOutput(outputStream, errorStream)
+
+    errorStream.toString().with {
+        if (it) {
+            throw new GradleException("Error executing ${command}:\n> ${it}")
+        }
+    }
+
+    return outputStream.toString().trim()
 }
