--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
 
     compile files(
             "libs/gregtech-1.12.2-2.1.0-beta.jar",
-            "libs/CraftTweaker2-1.12-4.1.20.670.jar"
+            "libs/CraftTweaker2-1.12-4.1.20.670.jar",
+            "libs/multiblocktweaker-1.12.2-stable-gtceu-1.6.0.jar"
     )
 }
 
