--- a/build.gradle
+++ b/build.gradle
@@ -1,95 +1,174 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven { url = "https://files.minecraftforge.net/maven" }
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-    }
+import org.jetbrains.gradle.ext.Gradle
+
+plugins {
+    id 'java'
+    id 'java-library'
+    id 'maven-publish'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
+    id 'eclipse'
+    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.16'
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
+version = project.mod_version
+group = project.maven_group
+archivesBaseName = project.archives_base_name
 
-version = "2.1.3"
-group = "com.zook.devtech" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "devtech"
+// Set the toolchain version to decouple the Java we run Gradle with from the Java used to compile and run the mod
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+        // Azul covers the most platforms for Java 8 toolchains, crucially including MacOS arm64
+        vendor.set(org.gradle.jvm.toolchain.JvmVendorSpec.AZUL)
+    }
+    // Generate sources and javadocs jars when building and publishing
+    withSourcesJar()
+    // withJavadocJar()
+}
 
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
+configurations {
+    embed
+    implementation.extendsFrom(embed)
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    mappings = "stable_39"
+    mcVersion = '1.12.2'
+
+    // MCP Mappings
+    mcpMappingChannel = 'stable'
+    mcpMappingVersion = '39'
+
+    // Set username here, the UUID will be looked up automatically
+    username = 'Developer'
+
+    // Add any additional tweaker classes here
+    // extraTweakClasses.add('org.spongepowered.asm.launch.MixinTweaker')
+
+    // Add various JVM arguments here for runtime
+    def args = ["-ea:${project.group}"]
+    if (project.use_coremod.toBoolean()) {
+        args << '-Dfml.coreMods.load=' + coremod_plugin_class_name
+    }
+    if (project.use_mixins.toBoolean()) {
+        args << '-Dmixin.hotSwap=true'
+        args << '-Dmixin.checks.interfaces=true'
+        args << '-Dmixin.debug.export=true'
+    }
+    extraRunJvmArguments.addAll(args)
+
+    useDependencyAccessTransformers = true
+
+    // Add any properties you want to swap out for a dynamic value at build time here
+    // Any properties here will be added to a class at build time, the name can be configured below
+    injectedTags.put("VERSION", project.version)
+    injectedTags.put("ID", project.archives_base_name)
+}
+
+// Generate a group.archives_base_name.Tags class
+tasks.injectTags.configure {
+    // Change Tags class' name here:
+    outputClassName.set("${project.group}.${project.archives_base_name}.Tags")
 }
 
 repositories {
     maven {
-        url = "http://chickenbones.net/maven/"
+        name 'CleanroomMC Maven'
+        url 'https://maven.cleanroommc.com'
     }
     maven {
-        url = "https://dvs1.progwml6.com/files/maven/"
+        name 'SpongePowered Maven'
+        url 'https://repo.spongepowered.org/maven'
     }
     maven {
-        name = "CurseMaven"
-        setUrl("https://www.cursemaven.com")
+        name 'CurseMaven'
+        url 'https://cursemaven.com'
+        content {
+            includeGroup 'curse.maven'
+        }
     }
     maven {
-        url "https://maven.cleanroommc.com"
+        url 'https://dvs1.progwml6.com/files/maven/'
     }
+    mavenLocal() // Must be last for caching to work
 }
 
 dependencies {
-    provided "mezz.jei:jei_1.12.2:4.15.0.293:api"
-    runtime "mezz.jei:jei_1.12.2:4.15.0.293"
+    compileOnly 'org.jetbrains:annotations:24.0.1'
+    implementation 'zone.rong:mixinbooter:8.3'
 
-    deobfCompile "curse.maven:codechicken-lib-1-8-242818:2779848"
-    deobfCompile ("zone.rong:mixinbooter:4.2")
-
-    compile files(
-            "libs/gregtech-1.12.2-2.4.0-beta.jar",
+    implementation 'mezz.jei:jei_1.12.2:4.16.1.302'
+    implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
+    implementation files(
+            "libs/gregtech-1.12.2-2.7.2-beta-dev.jar",
             "libs/CraftTweaker2-1.12-4.1.20.670.jar",
-            "libs/multiblocktweaker-1.12.2-stable-gtceu-1.6.0.jar"
+            "libs/multiblocktweaker-1.12.2-stable-gtceu-1.9.0.jar"
     )
 }
 
 processResources {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+    // This will ensure that this task is redone when the versions change
+    inputs.property 'version', project.version
+    inputs.property 'mcversion', project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+    // Replace various properties in mcmod.info and pack.mcmeta if applicable
+    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
+        // Replace version and mcversion
+        fcd.expand(
+                'version': project.version,
+                'mcversion': project.minecraft.version
+        )
     }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+
+    if (project.use_access_transformer.toBoolean()) {
+        rename '(.+_at.cfg)', 'META-INF/$1' // Make sure Access Transformer files are in META-INF folder
     }
 }
 
-def run(command) {
-    def process = command.execute()
-    def outputStream = new StringBuffer();
-    def errorStream = new StringBuffer();
-    process.waitForProcessOutput(outputStream, errorStream)
+jar {
+    manifest {
+        def attribute_map = [:]
+        attributes(attribute_map)
+    }
+    // Add all embedded dependencies into the jar
+    from(provider { configurations.embed.collect { it.isDirectory() ? it : zipTree(it) } })
+}
 
-    errorStream.toString().with {
-        if (it) {
-            throw new GradleException("Error executing ${command}:\n> ${it}")
+idea {
+    module {
+        inheritOutputDirs = true
+    }
+    project {
+        settings {
+            runConfigurations {
+                "1. Run Client"(Gradle) {
+                    taskNames = ["runClient"]
+                }
+                "2. Run Server"(Gradle) {
+                    taskNames = ["runServer"]
+                }
+                "3. Run Obfuscated Client"(Gradle) {
+                    taskNames = ["runObfClient"]
+                }
+                "4. Run Obfuscated Server"(Gradle) {
+                    taskNames = ["runObfServer"]
+                }
+            }
+            compiler.javac {
+                afterEvaluate {
+                    javacAdditionalOptions = "-encoding utf8"
+                    moduleJavacAdditionalOptions = [
+                            (project.name + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
+                    ]
+                }
+            }
         }
     }
-
-    return outputStream.toString().trim()
 }
 
-runClient {
-    jvmArgs "-Xmx4G"
+tasks.named("processIdeaSettings").configure {
+    dependsOn("injectTags")
 }
