--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,18 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+# Mod Information
+mod_version = 2.1.3
+maven_group = com.zook
+archives_base_name = devtech
+
+# Boilerplate Options
+use_mixins = true
+use_coremod = true
+use_assetmover = false
+use_access_transformer = false
+
+# Coremod Arguments
+include_mod = true
+coremod_plugin_class_name =
