fix compatibility issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ archives_base_name = devtech
 
 # Boilerplate Options
 use_mixins = true
-use_coremod = true
+use_coremod = false
 use_assetmover = false
 use_access_transformer = false
 
