--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,15 @@ dependencies {
     compileOnly 'org.jetbrains:annotations:24.0.1'
     implementation 'zone.rong:mixinbooter:8.3'
 
+    String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${project.archives_base_name}.refmap.json")
+    api (mixin) {
+        transitive = false
+    }
+    annotationProcessor('org.ow2.asm:asm-debug-all:5.2')
+    annotationProcessor('com.google.guava:guava:24.1.1-jre')
+    annotationProcessor('com.google.code.gson:gson:2.8.6')
+    annotationProcessor(mixin) { transitive = false }
+
     implementation 'mezz.jei:jei_1.12.2:4.16.1.302'
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848")
     implementation files(
